--- a/master-2.html
+++ b/master-2.html
@@ -72,7 +72,7 @@
 			<div class="container master-page">
 				<div class="row mb-5">
 					<div class="col-md-4">
-						<img src="img/team/5.png" alt="Руслан Петров" class="photo">
+						<img src="img/sample.jpg" alt="Руслан Петров" class="photo">
 						<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_1 mt-4 mx-auto">
 							<span class="f_09">Записаться</span>
 						</button>
@@ -84,7 +84,7 @@
 								<div class="font-2 accent mb-1">Парикмахер, стилист</div>
 								<div class="font-2 lightest-gray">Стаж работы 5 лет</div>
 							</div>
-							<div>
+							<div class="ms-4">
 								<div class="rating f_15 justify-content-sm-center mt-3 mt-sm-0">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
@@ -107,21 +107,17 @@
 						<div class="light-gray mt-4">
 							<p>Стрижет стрижки разной длины, которая подходит клиенту. Цирюльник с большим опытом. Его опыт берет корни во времена появления слова цирюльник.</p>
 						</div>
-						<div class="fw_7 f_12 mt-4">Повышение квалификации:</div>
+						<div class="fw_7 f_12 mt-4">Услуги:</div>
 						<ul class="light-gray mt-4">
-							<li>Академия L’Oréal.</li>
-							<li>Стажировка и мастер классы в Париже в Академии Dessange.</li>
-							<li>Стажировка и мастер классы в Милане в Академии Beautick.</li>
-							<li>Повышение квалификации и мастер классы у мировых звёзд колористики:</li>
-							<li>Guy Tang (США);</li>
-							<li>Romeu Felipe (Бразилия);</li>
-							<li>Rebecca Taylor (США);</li>
-							<li>Fabrice Parra (Франция);</li>
-							<li>Stephane Pous (Франция).</li>
+							<li>Окрашивание в один тон</li>
+							<li>Сложное окрашивание</li>
+							<li>Окрашивание хной</li>
+							<li>Стрижка каре</li>
 						</ul>
 					</div>
 				</div>
-				<div class="fw_6 f_12 mb-5">Услуги:</div>
+
+				<!-- <div class="fw_6 f_12 mb-5">Услуги:</div>
 				<div class="d-none d-md-block table-responsive text-center mb-5">
 					<table class="table">
 						<tbody>
@@ -267,7 +263,7 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-between align-items-center">
-					<div class="f_12 font-2 fw_6">Работы мастера:</div>
+					<div class="f_12 font-2 fw_6">Отзывы:</div>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#warning" class="btn_main btn_1"><span class="f_09">Оставить отзыв (не авт.)</span></button>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#review" class="btn_main btn_1"><span class="f_09">Оставить отзыв</span></button>
 				</div>
@@ -447,7 +443,7 @@
 							<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 	</main>
