--- a/master.html
+++ b/master.html
@@ -72,7 +72,7 @@
 			<div class="container master-page">
 				<div class="row mb-5">
 					<div class="col-md-4">
-						<img src="img/team/5.png" alt="Максим Жданов" class="photo">
+						<img src="img/sample.jpg" alt="Максим Жданов" class="photo">
 						<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_1 mt-4 mx-auto">
 							<span class="f_09">Записаться</span>
 						</button>
@@ -331,7 +331,7 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-between align-items-center">
-					<div class="f_12 font-2 fw_6">Работы мастера:</div>
+					<div class="f_12 font-2 fw_6">Отзывы:</div>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#warning" class="btn_main btn_1"><span class="f_09">Оставить отзыв (не авт.)</span></button>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#review" class="btn_main btn_1"><span class="f_09">Оставить отзыв</span></button>
 				</div>
