--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
 					<div class="d-none d-lg-flex row row-cols-3 gy-4 gy-xl-5 mb-4 mb-xl-5">
 						<div>
 							<div class="employee-preview">
-								<img src="img/team/5.png" alt="Максим Жданов" class="mb-2">
+								<img src="img/sample.jpg" alt="Максим Жданов" class="mb-2">
 								<div class="f_12 dark-gray fw_6 mb-1">Максим Жданов</div>
 								<div class="light-gray f_09">Парикмахер, коллорист</div>
 							</div>
 						</div>
 						<div>
 							<div class="employee-preview">
-								<img src="img/team/5.png" alt="Руслан Петров" class="mb-2">
+								<img src="img/sample.jpg" alt="Руслан Петров" class="mb-2">
 								<div class="f_12 dark-gray fw_6 mb-1">Руслан Петров</div>
 								<div class="light-gray f_09">Парикмахер, стилист</div>
 							</div>
@@ -253,44 +253,44 @@
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
 								<div class="employee-preview">
-									<img src="img/team/1.png" alt="Альфия" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Альфия</div>
-									<div class="light-gray f_09">Мастер ногтевого сервиса</div>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="employee-preview">
-									<img src="img/team/2.png" alt="Ольга" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Ольга</div>
-									<div class="light-gray f_09">Мастер ногтевого сервиса</div>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="employee-preview active">
-									<img src="img/team/3.png" alt="Мария" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Мария</div>
-									<div class="light-gray f_09">Мастер бровист</div>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="employee-preview">
-									<img src="img/team/4.png" alt="Анастасия" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Анастасия</div>
+									<img src="img/sample.jpg" alt="Максим Жданов" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Максим Жданов</div>
 									<div class="light-gray f_09">Парикмахер, коллорист</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="employee-preview">
-									<img src="img/team/5.png" alt="Максим" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Максим</div>
-									<div class="light-gray f_09">Парикмахер</div>
+									<img src="img/sample.jpg" alt="Руслан Петров" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Руслан Петров</div>
+									<div class="light-gray f_09">Парикмахер, стилист</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="employee-preview active">
+									<img src="img/team/natalia.jpg" alt="Наталья Ворон" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Наталья Ворон</div>
+									<div class="light-gray f_09">Топ - стилист, колорист, универсал, эстетический - трихолог.</div>
 								</div>
 							</div>
 							<div class="swiper-slide">
 								<div class="employee-preview">
-									<img src="img/team/6.png" alt="Виктория" class="mb-2">
-									<div class="f_12 dark-gray fw_6 mb-1">Виктория</div>
-									<div class="light-gray f_09">Косметолог</div>
+									<img src="img/team/alsu.jpg" alt="Алсу Залялутдинова" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Алсу Залялутдинова</div>
+									<div class="light-gray f_09">Стилист, коллорист, мастер униварсал по женским и мужским стрижкам</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="employee-preview">
+									<img src="img/team/elfia.jpg" alt="Эльсия" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Эльсия</div>
+									<div class="light-gray f_09">Стилист, коллорист, женский мастер</div>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="employee-preview">
+									<img src="img/team/ekaterina.jpg" alt="Екатерина Рыбак" class="mb-2">
+									<div class="f_12 dark-gray fw_6 mb-1">Екатерина Рыбак</div>
+									<div class="light-gray f_09">Мастер ногтевого сервиса</div>
 								</div>
 							</div>
 						</div>
@@ -480,7 +480,7 @@
 					<div id="map">
 						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A333ae55c8df85ec553d343e39e2166564c596283050f87f1b530765ad79ec4b3&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false"></script>
 					</div>
-					<button class="callback-anim" type="button" data-bs-toggle="offcanvas" data-bs-target="#callback">
+					<button class="callback-anim" type="button" data-bs-toggle="modal" data-bs-target="#callback">
 						<span>Онлайн запись</span>
 					</button>
 				</div>
