--- a/master-3.html
+++ b/master-3.html
@@ -84,7 +84,7 @@
 								<div class="font-2 accent mb-1">Топ - стилист,колорист, универсал, технолог краски HIPERTIN, эстетический - трихолог.</div>
 								<div class="font-2 lightest-gray">Стаж работы 5 лет</div>
 							</div>
-							<div>
+							<div class="ms-4">
 								<div class="rating f_15 justify-content-sm-center mt-3 mt-sm-0">
 									<svg class="grade" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 										<path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z"></path>
@@ -110,19 +110,16 @@
 						</div>
 						<div class="fw_7 f_12 mt-4">Повышение квалификации:</div>
 						<ul class="light-gray mt-4">
-							<li>Академия L’Oréal.</li>
-							<li>Стажировка и мастер классы в Париже в Академии Dessange.</li>
-							<li>Стажировка и мастер классы в Милане в Академии Beautick.</li>
-							<li>Повышение квалификации и мастер классы у мировых звёзд колористики:</li>
-							<li>Guy Tang (США);</li>
-							<li>Romeu Felipe (Бразилия);</li>
-							<li>Rebecca Taylor (США);</li>
-							<li>Fabrice Parra (Франция);</li>
-							<li>Stephane Pous (Франция).</li>
+							<li>окрашивание волос любой сложности</li>
+							<li>стрижки мужские/женские</li>
+							<li>работа с проблемами кожи головы и волос</li>
+							<li>укладки, прически</li>
+							<li>стрижки бритвой, ножницами, машинкой</li>	
 						</ul>
 					</div>
 				</div>
-				<div class="fw_6 f_12 mb-5">Услуги:</div>
+
+				<!-- <div class="fw_6 f_12 mb-5">Услуги:</div>
 				<div class="d-none d-md-block table-responsive text-center mb-5">
 					<table class="table">
 						<tbody>
@@ -268,7 +265,7 @@
 					</div>
 				</div>
 				<div class="d-flex justify-content-between align-items-center">
-					<div class="f_12 font-2 fw_6">Работы мастера:</div>
+					<div class="f_12 font-2 fw_6">Отзывы:</div>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#warning" class="btn_main btn_1"><span class="f_09">Оставить отзыв (не авт.)</span></button>
 					<button type="button" data-bs-toggle="modal" data-bs-target="#review" class="btn_main btn_1"><span class="f_09">Оставить отзыв</span></button>
 				</div>
@@ -448,7 +445,7 @@
 							<button type="button" class="f_08 btn_3 btn_main btn_xs">Перейти</button>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 	</main>
