--- a/service-page-1.html
+++ b/service-page-1.html
@@ -312,12 +312,12 @@
 				</a>
 				<hr size="2" class="my-5">
 
-				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера по окрашиванию</div>
+				<div class="font-2 fw_7 f_12 text-center mb-4">Мастера по стрижке</div>
 				<div class="swiper-6 position-relative">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<div class="master">
-								<img src="img/team/5.png">
+								<img src="img/sample.jpg">
 								<div class="p-2 p-md-4">
 									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-1.html">Максим Жданов</a></div>
 									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
@@ -349,7 +349,7 @@
 						</div>
 						<div class="swiper-slide">
 							<div class="master">
-								<img src="img/team/5.png">
+								<img src="img/sample.jpg">
 								<div class="p-2 p-md-4">
 									<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-2.html">Руслан Петров</a></div>
 									<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, стилист</div>
