--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
 				<div class="row row-cols-2 row-cols-sm-3 row-cols-lg-4 gx-0 gy-4">
 					<div>
 						<div class="master">
-							<img src="img/team/5.png">
+							<img src="img/sample.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-1.html">Максим Жданов</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, коллорист</div>
@@ -105,7 +105,7 @@
 					</div>
 					<div>
 						<div class="master">
-							<img src="img/team/5.png">
+							<img src="img/sample.jpg">
 							<div class="p-2 p-md-4">
 								<div class="font-2 f_12 fw_6 mb-md-2"><a href="master-2.html">Руслан Петров</a></div>
 								<div class="font-2 f_09 mb-2 mb-md-3">Парикмахер, стилист</div>
