--- a/service-page-5.html
+++ b/service-page-5.html
@@ -78,19 +78,13 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Ламинирование ресниц/img1.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Ламинирование ресниц/img2.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Ламинирование ресниц/img3.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
