--- a/service-page-6.html
+++ b/service-page-6.html
@@ -79,19 +79,10 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Брови/img1.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Брови/img2.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -139,19 +130,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/sample.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -199,19 +178,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/sample.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -259,19 +226,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/sample.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
