--- a/service-page-8.html
+++ b/service-page-8.html
@@ -79,10 +79,10 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Покрытие лаком/img1.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Покрытие лаком/img2.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
 								<img src="img/coloring/1.png" alt="" class="img-example">
@@ -157,19 +157,10 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Покрытие гель-лак/img1.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Покрытие гель-лак/img2.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -217,19 +208,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Укрепление акрилом/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -277,19 +256,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Французский маникюр/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -337,19 +304,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Японский маникюр/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
