--- a/service-page-9.html
+++ b/service-page-9.html
@@ -79,19 +79,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Педикюр/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -148,19 +136,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Медицинский педикюр/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
