--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
 					<form action="">
 						<div id="quiz-slider" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="false" data-bs-wrap="false">
 							<div class="carousel-inner">
-								<fildset class="carousel-item active">
+								<fieldset class="carousel-item active">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 1</div>
 									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Пришлите один или несколько  фотопотретов в дневном освещении</div>
@@ -849,15 +849,15 @@
 										<div>
 											<div class="input-file-hidden mx-auto mx-sm-0">
 												<button type="button" class="btn_main btn_2">Загрузить фото</button>
-												<input type="file" multiple oninput="loadImgs(this)">
+												<input type="file" class="verify" id="inp-file" multiple oninput="loadImgs(this); verifyInp(this);">
 											</div>
 											<div class="file-list mt-3"></div>
 										</div>
 									</div>
-									<button type="button" class="btn_main btn_1 mx-auto mt-3 mt-sm-5" data-bs-target="#quiz-slider" data-bs-slide="next"><span class="f_09">следующий шаг</span></button>
+									<button type="button" class="btn_main btn_1 mx-auto mt-3 mt-sm-5" data-bs-target="#quiz-slider" data-bs-slide="next" disabled="disabled"><span class="f_09">следующий шаг</span></button>
 									<div class="text-center f_09 light-gray mt-3">*Ваши фото будет удалены сразу после анализа</div>
-								</fildset>
-								<fildset class="carousel-item">
+								</fieldset>
+								<fieldset class="carousel-item">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 2</div>
 									<div class="font-2 f_14 fw_5 text-center mb-4 mb-sm-5">Ответьте на несколько вопросов</div>
@@ -866,11 +866,11 @@
 											<div class="font-2 f_12 fw_3 mb-2 mb-sm-3">Желаемый цвет волос:</div>
 											<div class="d-flex justify-content-between font-2 f_11 mb-4 mb-sm-5">
 												<div class="d-flex align-items-center">
-													<input type="radio" name="desired-color" id="darker" value="Темнее">
+													<input type="radio" class="verify" name="desired-color" id="darker" value="Темнее" oninput="verifyInp(this);">
 													<label for="darker" class="ms-3">Темнее</label>
 												</div>
 												<div class="d-flex align-items-center">
-													<input type="radio" name="desired-color" id="lighter" value="Светлее">
+													<input type="radio" class="verify" name="desired-color" id="lighter" value="Светлее" oninput="verifyInp(this);">
 													<label for="lighter" class="ms-3">Светлее</label>
 												</div>
 											</div>
@@ -878,33 +878,33 @@
 											<div class="font-2 f_12 fw_3 mb-2 mb-sm-3">Ваши волосы окрашены?</div>
 											<div class="d-flex justify-content-between font-2 f_11 mb-4 mb-sm-5">
 												<div class="d-flex align-items-center">
-													<input type="radio" name="dyed-hair" id="dyed" value="окрашенные">
+													<input type="radio" class="verify" name="dyed-hair" id="dyed" value="окрашенные" oninput="verifyInp(this);">
 													<label for="dyed" class="ms-3">Да</label>
 												</div>
 												<div class="d-flex align-items-center">
-													<input type="radio" name="dyed-hair" id="not-dyed" value="не окрашенные">
+													<input type="radio" class="verify" name="dyed-hair" id="not-dyed" value="не окрашенные" oninput="verifyInp(this);">
 													<label for="not-dyed" class="ms-3">Нет</label>
 												</div>
 											</div>
 
 											<div class="font-2 f_12 fw_3 mb-2 mb-sm-3">Чем?</div>
-											<input type="text" placeholder="Название краски" class="white w-100">
+											<input type="text" placeholder="Название краски" class="verify white w-100" oninput="verifyInp(this);">
 
 											<div class="d-flex justify-content-between mt-4 mt-sm-5">
 												<button type="button" class="btn_main btn_2 me-4" data-bs-target="#quiz-slider" data-bs-slide="prev"><span class="f_09">Назад</span></button>
-												<button type="button" class="btn_main btn_1" data-bs-target="#quiz-slider" data-bs-slide="next"><span class="f_09">следующий шаг</span></button>
+												<button type="button" class="btn_main btn_1" data-bs-target="#quiz-slider" data-bs-slide="next" disabled="disabled"><span class="f_09">следующий шаг</span></button>
 											</div>
 										</div>
 									</div>
-								</fildset>
-								<fildset class="carousel-item">
+								</fieldset>
+								<fieldset class="carousel-item">
 									<div class="indicators mb-4"></div>
 									<div class="font-2 text-center f_15 mb-3">Шаг 3</div>
 									<div class="font-2 f_14 fw_5 text-center mb-1">Оставьте Ваши контактные данные</div>
 									<div class="font-2 f_12 fw_3 text-center mb-4 mb-sm-5">Для получения результатов введите номер телефона</div>
 									<div class="row justify-content-center">
 										<div class="col-lg-7 col-xxl-6">
-											<input type="text" placeholder="+7 (___) ___ __ __" class="w-100">
+											<input type="text" placeholder="+7 (___) ___ __ __" class="w-100" required>
 											<div class="d-flex justify-content-between mt-4 mt-sm-5">
 												<button type="button" class="btn_main btn_2 me-4" data-bs-target="#quiz-slider" data-bs-slide="prev"><span class="f_09">Назад</span></button>
 												<button type="submit" class="btn_main btn_1"><span class="f_09">Готово</span></button>
@@ -912,7 +912,7 @@
 											<div class="text-center f_09 light-gray mt-3">Нажимая “Готово”, Вы соглашаетесь условиями с обработки персональных данных</div>
 										</div>
 									</div>
-								</fildset>
+								</fieldset>
 							</div>
 						</div>
 					</form>
