--- a/service-page-2.html
+++ b/service-page-2.html
@@ -79,19 +79,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Окрашивание в один тон/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -157,19 +145,10 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/сложное окрашивание/img1.jpg" alt="" class="img-example">
 							</div>
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/сложное окрашивание/img2.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -235,19 +214,7 @@
 					<div class="swiper-5">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/coloring/1.png" alt="" class="img-example">
+								<img src="img/services/Окрашивание хной/img1.jpg" alt="" class="img-example">
 							</div>
 						</div>
 						<div class="swiper-button-prev">
