--- a/product-8.html
+++ b/product-8.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Status - О нас</title>
+	<title>Status - Каталог - Кератиновый шампунь Pro Keratin Repair, 300 мл</title>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
@@ -62,42 +62,215 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-					<li class="breadcrumb-item"><a href="about.html">О нас</a></li>
+					<li class="breadcrumb-item"><a href="catalog.html">Каталог</a></li>
+					<li class="breadcrumb-item"><a href="product-8.html">Кератиновый шампунь Pro Keratin Repair, 300 мл</a></li>
 				</ol>
 			</nav>
 		</div>
 
-		<section id="sec-11">
-			<div class="container">
-				<h1 class="inner">О нас</h1>
-				<div class="text">
-					<p><span class="fw_5">Салон Status</span> — модное пространство с высоким уровнем сервиса и приятной атмосферой. Сюда приходят, чтобы меняться и совершенствоваться. Здесь царит магия красоты, а высококлассные специалисты создают прекрасные образы.</p>
-					<p>Команду стилистов салона составляют профессиональные мастера с большим опытом, выпускники ведущих парикмахерских школ мира, которые продолжают постоянно повышать свой уровень.</p>
-					<p>Помимо стрижек, укладок, причёсок и окрашиваний в самых сложных техниках, к вашим услугам дневной, вечерний макияж, коррекция формы и цвета бровей, долговременная укладка бровей, наращивание ресниц и перманентный макияж.</p>
-					<p>В нашем салоне представлены эксклюзивные бренды индустрии красоты: Hipertin (Испания), Time To Grow, натуральная индийская хна.</p>
-					<p>Мастера ногтевого сервиса выполняют маникюр и педикюр любой сложности, работая на самых лучших продуктах сегмента.</p>
-					<p>Также в салоне можно получить несколько услуг одновременно, для экономии Вашего времени.</p>
-					<p>Приходите в Status, и наша команда создаст ваш совершенный образ.</p>
-					<p>Высокий уровень сервиса, приятная атмосфера, широкий, постоянно обновляющийся ассортимент услуг отвечают высоким требованием самых взыскательных клиентов.</p>
+		<section id="sec-14" class="mb_4">
+			<div class="container position-relative">
+				<h1 class="inner text-start mb-5">Кератиновый шампунь Pro Keratin Repair, 300 мл</h1>
+				<div class="row">
+					<div class="col-1 d-none d-md-flex flex-column justify-content-center">
+						<div class="swiper-thumbs">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img src="img/product/Кератиновый шампунь Pro Keratin Repair, 300 мл.jpg" alt="">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-xxl-3 mb-5 mb-md-0">
+						<div class="swiper-img position-relative">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<img src="img/product/Кератиновый шампунь Pro Keratin Repair, 300 мл.jpg" alt="">
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-5 col-lg-4 col-xxl-3">
+						<div class="d-flex justify-content-between align-items-center d-sm-none mb-3">
+							<div class="font-2 fw_6 mb-2">Цена</div>
+							<div>
+								<!-- <div class="font-2 f_13 lightest-gray text-decoration-line-through mb-1">732 ₽</div> -->
+								<div class="font-2 f_15 fw_5">1360 ₽</div>
+							</div>
+						</div>
+						
+						<div class="d-flex d-sm-block justify-content-between align-items-center mb-4 mb-sm-0">
+							<div class="font-2 fw_6 mb-sm-2">Объем</div>
+							<div class="d-flex mb-sm-5">
+								<div class="radio-text">
+									<input type="radio" name="size" value="300 ml">
+									<div class="f_09 fs_6">300 ml</div>
+								</div>
+								<!-- <div class="radio-text ms-3">
+									<input type="radio" name="size" value="1000 ml">
+									<div class="f_09 fs_6">1000 ml</div>
+								</div> -->
+							</div>
+						</div>
+						
+						<div class="font-2 fw_6 mb-2 mb-sm-4">Характиристики</div>
+						<div class="table-relative">
+							<table class="table table-borderless table-sm">
+								<tbody class="light-gray f_08">
+									<tr>
+										<td>Категория</td>
+										<td class="text-end">шампунь</td>
+									</tr>
+									<tr>
+										<td>Тип волос</td>
+										<td class="text-end">для сухих и вьющихся</td>
+									</tr>
+									<tr>
+										<td>Бренд</td>
+										<td class="text-end">LINECURE</td>
+									</tr>
+									<tr>
+										<td>Объем</td>
+										<td class="text-end">300ml</td>
+									</tr>
+									<tr>
+										<td>Страна изготовитель</td>
+										<td class="text-end">Испания</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
+					<div class="d-none d-sm-block col-sm-6 col-md-2 offset-lg-1">
+						<div class="font-2 fw_6 mb-2">Цена</div>
+						<!-- <div class="font-2 f_13 lightest-gray text-decoration-line-through mb-2">732 ₽</div> -->
+						<div class="font-2 f_15 fw_5 mb-4">1360 ₽</div>
+						<button type="button" data-bs-toggle="modal" data-bs-target="#callback" class="btn_main btn_2 px-3 px-sm-4 py-2"><span class="f_08">Заказать</span></button>
+						<!-- <button type="button" class="btn_main btn_1 btn-to-cart mb-3">
+							<img src="img/icons/cart.svg" alt="В корзину" class="me-3">
+							<span class="text-capitalize">В корзину</span>
+						</button> -->
+						<!-- <button type="button" class="btn_main btn_2 btn-fav py-3 mb-3" onclick="toggleState(this)" data-state="off">
+							<svg class="me-3" viewBox="0 0 41 35" xmlns="http://www.w3.org/2000/svg">
+								<path d="M36.2764 4.35411L36.2767 4.35445C37.1419 5.21925 37.8283 6.24604 38.2965 7.37617C38.7648 8.5063 39.0058 9.71762 39.0058 10.9409C39.0058 12.1642 38.7648 13.3755 38.2965 14.5057C37.8283 15.6358 37.1419 16.6626 36.2767 17.5274L36.2766 17.5276L34.2891 19.5151L20.4087 33.3955L6.52828 19.5151L4.54078 17.5276C2.79389 15.7807 1.8125 13.4114 1.8125 10.9409C1.8125 8.47045 2.79389 6.10117 4.54078 4.35428C6.28766 2.60739 8.65695 1.626 11.1274 1.626C13.5979 1.626 15.9672 2.60739 17.7141 4.35428L19.7016 6.34178L20.4087 7.04889L21.1158 6.34178L23.1033 4.35428L23.1034 4.35411C23.9682 3.4889 24.995 2.80256 26.1252 2.33429C27.2553 1.86602 28.4666 1.625 29.6899 1.625C30.9132 1.625 32.1245 1.86602 33.2547 2.33429C34.3848 2.80256 35.4116 3.48891 36.2764 4.35411Z"/>
+							</svg>								
+							<span class="text-capitalize"></span>
+						</button> -->
+					</div>
+					<div class="col-md-9 col-lg-6">
+						<div class="font-2 fw_6 mt-3 mt-sm-5 mb-2 mb-sm-3">Описание</div>
+						<div class="text font-2 f_08">
+							<p>Шампунь Pro Keratin Repair подходит для сухих и вьющихся волос. Формула, основанная на гидролизованных растительных белках и пшеничном протеине, помогает восстанавливать и создавать защитный и герметизирующий слой. После применения шампуня пряди легче расчесываются, а вьющиеся волосы меньше путаются.</p>
+						</div>
+						<button type="button" data-state="off" onclick="readall(this)" class="font-2 bb_1 f_08 accent mt-1">развернуть</button>
+
+						<div class="font-2 fw_6 mt-4 mt-sm-5 mb-2 mb-sm-3">Способ применения</div>
+						<div class="font-2 f_08"></div>
+
+						<div class="font-2 fw_6 mt-4 mt-sm-5 mb-2 mb-sm-3">Состав</div>
+						<div class="text font-2 f_08 lightest-gray">
+							<p></p>
+						</div>
+						<button type="button" data-state="off" onclick="readall(this)" class="font-2 bb_1 f_08 accent mt-1">развернуть</button>
+					</div>
 				</div>
-				<div class="f_12 fw_6 text-center my-5">Галерея</div>
+				<div class="mobile-btns">
+					<button type="button" class="btn_main btn_1 btn-to-cart">
+						<img src="img/icons/cart.svg" alt="В корзину" class="me-2">
+						<span class="text-capitalize">В корзину</span>
+					</button>
+					<button type="button" class="btn_main btn_2 btn-fav py-2 ms-2" onclick="toggleState(this)" data-state="off">
+						<svg class="me-2" viewBox="0 0 41 35" xmlns="http://www.w3.org/2000/svg">
+							<path d="M36.2764 4.35411L36.2767 4.35445C37.1419 5.21925 37.8283 6.24604 38.2965 7.37617C38.7648 8.5063 39.0058 9.71762 39.0058 10.9409C39.0058 12.1642 38.7648 13.3755 38.2965 14.5057C37.8283 15.6358 37.1419 16.6626 36.2767 17.5274L36.2766 17.5276L34.2891 19.5151L20.4087 33.3955L6.52828 19.5151L4.54078 17.5276C2.79389 15.7807 1.8125 13.4114 1.8125 10.9409C1.8125 8.47045 2.79389 6.10117 4.54078 4.35428C6.28766 2.60739 8.65695 1.626 11.1274 1.626C13.5979 1.626 15.9672 2.60739 17.7141 4.35428L19.7016 6.34178L20.4087 7.04889L21.1158 6.34178L23.1033 4.35428L23.1034 4.35411C23.9682 3.4889 24.995 2.80256 26.1252 2.33429C27.2553 1.86602 28.4666 1.625 29.6899 1.625C30.9132 1.625 32.1245 1.86602 33.2547 2.33429C34.3848 2.80256 35.4116 3.48891 36.2764 4.35411Z"/>
+						</svg>								
+						<span class="text-capitalize"></span>
+					</button>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
+				<h4 class="text-start">С этим товаром заказывают</h4>
 				<div class="position-relative">
-					<div class="swiper-5">
+					<div class="swiper-9">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="img/img1.jpg" alt="" class="img-example">
+								<div class="product">
+									<a href="product.html"><img src="img/product/1.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+									<div class="text mb-2 mb-sm-4">Matrix Кондиционер для окрашенных волос, с антиоксидантами, для глазурирования цвета, Total Results Keep Me Vivid, 300 мл</div>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
+										<div class="f_13 fw_5 black">632 ₽</div>
+									</div>
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/img2.jpg" alt="" class="img-example">
+								<div class="product">
+									<a href="product.html"><img src="img/product/2.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae dolorem perspiciatis explicabo cumque quidem placeat laborum deserunt, provident laboriosam saepe?</div>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
+										<div class="f_13 fw_5 black">632 ₽</div>
+									</div>
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/img3.jpg" alt="" class="img-example">
+								<div class="product">
+									<a href="product.html"><img src="img/product/3.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+									<div class="text mb-2 mb-sm-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae eum, repellat cum aperiam quibusdam harum! </div>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
+										<div class="f_13 fw_5 black">632 ₽</div>
+									</div>
+								</div>
 							</div>
 							<div class="swiper-slide">
-								<img src="img/img4.jpg" alt="" class="img-example">
-							</div>
-							<div class="swiper-slide">
-								<img src="img/img1.jpg" alt="" class="img-example">
+								<div class="product">
+									<a href="product.html"><img src="img/product/4.jpg" alt="" class="photo mb-2 mb-sm-4"></a>
+									<div class="text mb-2 mb-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi earum, impedit blanditiis voluptas doloremque esse omnis. </div>
+									<div class="d-flex justify-content-between align-items-center">
+										<div class="add-to-cart">
+											<div class="count-enter">
+												<button type="button" onclick="remove(this)">-</button>
+												<div class="fw_5 f_08">
+													<span class="">1</span><span> шт</span>
+												</div>
+												<button type="button">+</button>
+											</div>
+											<button type="button" class="btn_main px-3 px-sm-4 py-2" onclick="addToCart(this)"><span class="f_08">В корзину</span></button>
+										</div>
+										<div class="f_13 fw_5 black">632 ₽</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="swiper-button-prev">
@@ -202,7 +375,7 @@
 
 	<footer class="d-block d-md-none mobile">
 		<div class="container h-100 d-flex justify-content-around align-items-center">
-			<a href="index.html">
+			<a href="index.html" class="active">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M13.9999 7.22171L19.8333 12.4717V21.5834H17.4999V14.5834H10.4999V21.5834H8.16659V12.4717L13.9999 7.22171ZM13.9999 4.08337L2.33325 14.5834H5.83325V23.9167H12.8333V16.9167H15.1666V23.9167H22.1666V14.5834H25.6666L13.9999 4.08337Z"/>
 				</svg>
@@ -220,7 +393,7 @@
 				</svg>
 				<div>Услуги</div>				
 			</a>
-			<a href="catalog.html" class="active">
+			<a href="catalog.html">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<path d="M7 8.5H2V6.5H7V8.5ZM7 11.5H2V13.5H7V11.5ZM20.59 18.5L16.76 14.67C15.96 15.19 15.02 15.5 14 15.5C11.24 15.5 9 13.26 9 10.5C9 7.74 11.24 5.5 14 5.5C16.76 5.5 19 7.74 19 10.5C19 11.52 18.69 12.46 18.17 13.25L22 17.09L20.59 18.5ZM17 10.5C17 8.85 15.65 7.5 14 7.5C12.35 7.5 11 8.85 11 10.5C11 12.15 12.35 13.5 14 13.5C15.65 13.5 17 12.15 17 10.5ZM2 18.5H12V16.5H2V18.5Z"/>
 				</svg>
